<resources>
    <string name="app_name">Finance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings_wallet">Settings wallet</string>
    <string name="action_new_wallet">New wallet</string>
    <string name="action_wallets">Wallets</string>
    <string name="action_money_transfers">Money transfers</string>

    <string name="title_activity_wallets">WalletsActivity</string>
    <string name="title_wallet_name">Wallet name</string>
    <string name="title_main_wallet">Main wallet</string>
    <string name="title_balance_and_currency">Balance and currency</string>
    <string name="title_currency">Currency</string>
    <string name="title_balance">Balance</string>
    <string name="title_background_and_icon">Background and icon</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_amount">Amount</string>
    <string name="title_category">Category</string>
    <string name="title_date">Date</string>
    <string name="title_description">Description</string>
    <string name="title_photo">Photo</string>
    <string name="title_save">Save</string>
    <string name="title_wallet_insert">Wallet inserted</string>
    <string name="title_wallet_updated">Wallet updated</string>
    <string name="title_wallet_delete">Wallet delete</string>
    <string name="title_transaction_insert">Transaction insert</string>
    <string name="title_transaction_updated">Transaction updated</string>
    <string name="title_transaction_delete">Transaction delete</string>
    <string name="title_press_to_exit">Press once again to exit!</string>
    <string name="title_yesterday">Yesterday</string>
    <string name="title_today">Today</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_from">From</string>
    <string name="title_to">To</string>

    <string name="message_delete_wallet">Are you sure you want to delete this wallet?</string>
    <string name="message_for_main_wallet">You can not lower your main purse.</string>

    <string name="toolbar_add_transaction">Add Transaction</string>
    <string name="toolbar_transactions">Transactions</string>
    <string name="toolbar_add_wallet">Add Wallet</string>
    <string name="toolbar_update_wallets">Update Wallet</string>
    <string name="toolbar_wallets">Wallets</string>

    <string name="tab_title_income">Income</string>
    <string name="tab_title_expenses">Expenses</string>
    <string name="tab_title_transfers">Transfers</string>


    <!--___Currency___-->
    <string name="name_byn">Belarusian Ruble</string>
    <string name="name_eur">Euro</string>
    <string name="name_usd">US Dollar</string>
    <string name="name_rub">Russian Ruble</string>
    <string name="name_gbp">Pound Sterling</string>
    <string name="name_aud">Australian Dollar</string>
    <string name="name_nzd">New Zealand Dollar</string>
    <string name="name_cad">Canadian Dollar</string>
    <string name="name_chf">Swiss Franc</string>
    <string name="name_jpy">Yen</string>
    <string name="name_cny">Yuan Renminbi</string>

    <!--Category-->
    <string name="name_auto">Auto</string>
    <string-array name="auto">
        <item>Autoinsurance</item>
        <item>Taxes and duties</item>
        <item>Maintenance and Spare Parts</item>
        <item>Paid parking</item>
        <item>Buying a car</item>
        <item>Repair</item>
        <item>Fuel</item>
    </string-array>

    <string name="name_bank">Bank</string>
    <string-array name="bank">
        <item>Commission</item>
        <item>Payment for bank services</item>
        <item>Interest</item>
    </string-array>

    <string name="name_house">House</string>
    <string-array name="house">
        <item>Rent</item>
        <item>Purchase of furniture</item>
        <item>Purchase tableware</item>
        <item>Repair</item>
        <item>Electronics and software</item>
    </string-array>

    <string name="name_pets">Pets</string>
    <string name="action_delete">Delete</string>
    <string-array name="pets">
        <item>Veterinary services</item>
        <item>Feed</item>
        <item>Hotel for animals</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_transaction">AddNewTransactionActivity</string>

</resources>
