<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="by.xo.egorp.finance.dialogs.SettingWalletDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="15dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <LinearLayout style="@style/SettingColumnStyle">

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="left|center"
                android:text="@string/title_main_wallet" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <Switch
                    android:id="@+id/switch_wallet_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <!---->

        <LinearLayout style="@style/SettingColumnStyle">

            <EditText
                android:id="@+id/et_wallet_name"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@android:color/transparent"
                android:gravity="center|left"
                android:hint="@string/title_wallet_name" />

            <ImageButton
                android:id="@+id/ib_clear_wallet_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_clear_24dp" />
        </LinearLayout>

        <!---->

        <LinearLayout style="@style/SettingColumnStyle">

            <EditText
                android:id="@+id/et_wallet_balance"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@android:color/transparent"
                android:gravity="center|left"
                android:hint="0.00"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_wallet_currency_cod"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="XXX" />
        </LinearLayout>

        <!---->

        <LinearLayout style="@style/SettingColumnStyle">

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center|left"
                android:text="@string/title_background_and_icon" />

            <ImageButton
                android:id="@+id/ib_wallet_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:src="@drawable/ic_work_black_24dp"
                android:text="XXX" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">

                <ImageView
                    android:id="@+id/circle_default"
                    style="@style/SettingColumnStyle.Circle"
                    android:tint="@android:color/transparent" />

                <ImageView
                    android:id="@+id/circle_red"
                    style="@style/SettingColumnStyle.Circle"
                    android:tint="@color/background_red"/>

                <ImageView
                    android:id="@+id/circle_blue"
                    style="@style/SettingColumnStyle.Circle"
                    android:tint="@color/background_blue"/>

                <ImageView
                    android:id="@+id/circle_green"
                    style="@style/SettingColumnStyle.Circle"
                    android:tint="@color/background_green"/>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>